<resources>
    <string name="app_name">PayServices</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_services">Services</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_phone">Phone</string>
    <string name="label_name">Your name</string>
    <string name="label_otp">OTP</string>
    <string name="login">Login</string>
    <string name="request_otp">Request OTP</string>
    <string name="label_or">or</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_login">Login</string>
    <string name="label_already_account">Already have an account?</string>
    <string name="label_dont_have_account">Don\'t have an account?</string>
    <string name="u_sign_in"><u>Sign in</u></string>
    <string name="u_sign_up"><u>Sign UP</u></string>
    <string name="sign_in_component">SIGN_IN_COMPONENT</string>
    <string name="sign_up_component">SIGN_UP_COMPONENT</string>
    <string name="label_select_date">Select Date</string>
    <string name="label_select_address">Select Address</string>
    <string name="label_select_service">Select Service</string>
    <string name="label_rs_sym">\u20B9</string>
    <string name="use_current_address">Use Current Address</string>
    <string name="enter_new_address">Enter New Address</string>
    <string name="label_address">Address</string>
    <string name="label_landmark">Landmark</string>
    <string name="label_city">City</string>
    <string name="label_pin_code">Pin code</string>
    <string name="label_book_service">Book Service</string>
    <string name="label_waiting_for_location">Waiting for location</string>
    <string name="label_sending_top">Sending OTP…</string>
    <string name="label_signing_up">Signing up…</string>
    <string name="label_logging_in">Signing in…</string>
    <string name="label_booking_service">Booking Service…</string>
    <string name="other_services_offer">Other Services We Offer!</string>
    <string name="every_re_text">Let\'s talk on your every requirements!</string>
    <string name="cancellation_reason">Tell us something about your requirements!</string>
    <string name="order_cancellation_reason">Please enter cancellation reason</string>
    <string name="write_a_review">Write a review</string>
    <string name="my_profile">My Profile</string>
    <string name="my_addresses">My Addresses</string>
    <string name="my_bookings">My Bookings</string>
    <string name="join_as_executive">Apply as Executive</string>
    <string name="label_logout">Logout</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="address">Address: </string>
    <string name="pincode">PinCode:</string>
    <string name="landmark">Landmark:</string>
    <string name="city">City:</string>
    <string name="action_add_new_address">Add New Address</string>
    <string name="label_contact_no">Phone:</string>
    <string name="label_phone_no">+91-9251086410</string>
    <string name="label_email">support@payservice.in</string>
    <string name="booking_status">Booking Status:</string>
    <string name="cancel_order"><u>Cancel Booking</u></string>
    <string name="delete_address"><u>Delete Address</u></string>
    <string name="date">Date:</string>
    <string name="service_name">Service Name</string>
    <string name="default_notification_channel_id">default</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="connection_error">No internet connection</string>
    <string name="rs_icon">\u20B9</string>
    <string name="label_submit">Update Profile</string>
    <string name="about_us_content_para_1">Pay Services is a one-stop solution to your home, office, society and corporate  Handyman services. We provide you door to door assistance that simplifies your everyday living.</string>
    <string name="about_us_content_para_2">Our vision and mission are to restructure our marketing through the use of technology and smart processors.</string>
    <string name="about_us_content_para_3">You can book a wide range of services, delivered by well qualified &amp; background-checked professionals from anywhere, anytime by booking services using our mobile app.</string>
    <string name="about_us_content_para_4">For Better Understanding Visit <a href="https://payservice.in/">PayServices</a></string>
    <string name="terms_and_policies"><![CDATA[Terms & Policies]]></string>
    <string name="label_state">State</string>
    <string-array name="payment_method">
        <item>Cash</item>
        <item>Online</item>
    </string-array>
</resources>