<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/top_layout"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginBottom="50dp"
            android:layout_marginTop="100dp"
            android:id="@+id/imageView"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pay_logo" />
        <EditText
            android:id="@+id/edt_name"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="text"
            android:layout_marginBottom="15dp"
            android:hint="@string/label_name"
            android:textColorHint="@color/colorAccent" />
        <EditText
            android:id="@+id/edt_phone"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="phone"
            android:hint="@string/label_phone"
            android:textColorHint="@color/colorAccent" />
        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/edt_otp"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:drawableStart="@drawable/ic_otp"
            android:drawablePadding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="number"
            android:hint="@string/label_otp"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textSize="18sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_bg" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_up"
            android:textSize="18sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_bg" />

        <LinearLayout
            android:id="@+id/sign_in_info"
            android:tag="@string/sign_in_component"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">
            <TextView
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_already_account" />
            <TextView
                android:textSize="17sp"
                android:id="@+id/btn_login_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/u_sign_in"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_up_info"
            android:tag="@string/sign_up_component"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">
            <TextView
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dont_have_account" />
            <TextView
                android:id="@+id/btn_registration_view"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/u_sign_up"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>