<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bookings.BookingsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingBottom="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/my_profile"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/my_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
            <View
                android:background="@color/colorDot"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/my_addresses"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/my_addresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
            <View
                android:background="@color/colorDot"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/my_bookings"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/my_bookings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
            <View
                android:background="@color/colorDot"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/about_us"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
            <View
                android:background="@color/colorDot"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/contact_us"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
            <View
                android:background="@color/colorDot"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/rate_us"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
            <View
                android:background="@color/colorDot"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/terms_and_policies"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/terms_and_policies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
            <View
                android:background="@color/colorDot"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/join_as_executive"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/join_as_executive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
            <View
                android:background="@color/colorDot"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/logout"
                android:padding="18dp"
                android:textSize="15sp"
                android:text="@string/label_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/ic_arrow_right" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>