<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/ed_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_address"
        android:hint="@string/label_address"
        android:inputType="textMultiLine|textPostalAddress"
        android:lines="3"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:imeOptions="actionNext"
        android:scrollHorizontally="false" />
    <EditText
        android:id="@+id/ed_landmark"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_address"
        android:hint="@string/label_landmark"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:imeOptions="actionNext" />
    <EditText
        android:id="@+id/ed_city"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_address"
        android:hint="@string/label_city"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:imeOptions="actionNext" />
    <EditText
        android:id="@+id/ed_pincode"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_address"
        android:hint="@string/label_pin_code"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:imeOptions="actionNext" />
</LinearLayout>