<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/service_item_border"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/service_date_wrapper"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landmark" />
        <TextView
            android:id="@+id/landmark"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/address_wrapper"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/service_date_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pincode" />
        <TextView
            android:id="@+id/pincode"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/order_status_wrapper"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/address_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" />
        <TextView
            android:id="@+id/city"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/delete_address"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:text="@string/delete_address"
        android:textColor="@color/redDark"
        app:layout_constraintTop_toBottomOf="@id/order_status_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>