<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/service_item_border">
    <TextView
        android:id="@+id/service_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/service_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/service_date_wrapper"
        app:layout_constraintTop_toBottomOf="@id/service_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />
        <TextView
            android:id="@+id/service_date"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/address_wrapper"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/service_date_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />
        <TextView
            android:id="@+id/address"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/order_status_wrapper"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/address_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_status" />
        <TextView
            android:id="@+id/booking_status"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/cancel_booking"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/cancel_order"
        android:textColor="@color/redDark"
        app:layout_constraintTop_toBottomOf="@id/order_status_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/pay_for_booking"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="Pay now"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/order_status_wrapper"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/rate_now"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="Rate now"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/order_status_wrapper"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>